Fix h1’s on mobile

--- a/style.css
+++ b/style.css
@@ -80,6 +80,9 @@ a:hover{
   html {
     font-size: 20px;
   }
+  .header-container h1 {
+      font-size: 1.5rem;
+  }
   .header-container h2 {
       font-size:1em;
   }
